--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,26 +3,13 @@ html{
 }
 .background{
 	background-color: #8ee9ee;
-	margin: 50px;
+	margin: 30px;
+	padding:20px;
 }
-.left1{
-	float: left;
-	height: 300px;
-	width: 300px;
-	margin: 10px;
-}
-img{
-	margin-top: 50px;
-	margin-right: 50px;
-	margin-bottom: 20px;
-	margin-left: 50px;
-	height: 200px;
-	width: 150px;
-}
-.left a:link, a:visited{
+.public a:link, a:visited{
 	color: #5b391e;
 }
-.left1 a:hover{
+.public a:hover{
 	color: #083f42;
 }
 .public{
@@ -32,20 +19,13 @@ img{
 }
 #info{
 	text-align: center;
-}
-.right1{
-	height:300px;
-	width: 800px;
-	float:left;
-	margin: 10px;
+	border:2px solid #5b391e;
+	margin: 20px;
+	padding: 20px;
+	background-color: #bbf1f4;
 }
 h1{
-	font-size: 45px;
-	text-align: center;
-	margin-top: 30px;
-	margin-right: 30px;
-	margin-left: 30px;
-	margin-bottom: 10px;
+	font-size: 60px;
 	color: #5b391e;
 }
 h2{
@@ -142,9 +122,13 @@ h4{
 	overflow: auto;
 	color: #5b391e;
 }
+ul{
+	list-style-type: none;
+}
 #experience{
 	background-color: #1abdc6;
 	z-index: -1;
+	font-size: 20px;
 }
 #skills{
 	background-color: #1abdc6;
@@ -157,7 +141,7 @@ h4{
 }
 #education{
 	background-color: #1abdc6;
-	z-index: -1
+	z-index: -1;
 }
 #references{
 	background-color: #1abdc6;
@@ -175,10 +159,6 @@ textarea{
 	background-color: #bbf1f4;
 	overflow:scroll;
 }
-/*textarea:focus{
-	color: #5b391e;
-	background-color: #bbf1f4;
-}*/
 .middle{
 	float: left;
 	width:250px;
